# SpatialSkylineQueries-on-TIN

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
data/: plane0000500.off  plane0001000.off  plane0002000.off  plane0003000.off  plane0004000.off  plane0005000.off  plane0006000.off  plane0007000.off  plane0008000.off  plane0009000.off  plane0010000.off  plane0050000.off  q3-0000500.off  q3-0001000.off  q3-0002000.off  q3-0003000.off  q3-0004000.off  q3-0005000.off  q3-0006000.off  q3-0007000.off  q3-0008000.off  q3-0009000.off  q3-0010000.off  q3-0011000.off  q3-0012000.off  q3-0013000.off  q3-0014000.off  q3-0015000.off  q3-0016000.off  q3-0017000.off  q3-0018000.off  q3-0019000.off  q3-0020000.off  q3-0050000.off  tripod.off
scripts/: build-debug.sh  build-release.sh  build-type-exec.sh  create-tin.sh  measure-multi-rand-MBRQ-detail.sh  measure-multi-rand-MBRQ.sh  measure-multi-rand-P-detail.sh  measure-multi-rand-P.sh  measure-multi-rand-Q-detail.sh  measure-multi-rand-Q.sh  measure-multi-rand-template.sh  measure-multi-rand-test.sh  measure-multi-rand-tin-detail.sh  measure-multi-rand-tin.sh  measure-template.sh  measure-worst-MBRQ.sh
scripts/measure/: ds-grep.bash  time-grep.bash
source/: CMakeLists.txt
source/datapoint/: generator.h
source/index/: surface_index.h
source/querypoint/: generator.h
source/skyline/: CMakeLists.txt  dominance_dist_helper.h  main.cc  meshgraph.h  minimum_bounding_box.h  skyline_on_tin.h  solution_unittest.cc  unionfind.h  vizualize.h  writeoff.h
source/tin/: CMakeLists.txt  create_fractal_points.cc  tin_reconstruction_from_points.cc  tin_validator.cc
source/util/: compression.h  enumurateref.h  id_io.h  measure_time.h  stringformat.h  vector.h
